tests/ui/unknown_function.stderr
Error [E0102]: nothing named `pirnt` exists here
  --> tests/ui/unknown_function.lex:2:5
    |
  2 |     pirnt("hi");
    |     ^^^^^
 Why: only functions that have been defined (or built in, like `print`) can be called
 Fix: did you mean `print`?
